# Image_Recognition_OpenCV

./: .gitignore  解决方案总结.txt
demo/: CMakeLists.txt  readme.md
lib/install/: setup_vars_opencv4.cmd
lib/install/x64/vc17/lib/: OpenCVConfig.cmake  opencv_calib3d4120.lib  opencv_core4120.lib  opencv_dnn4120.lib  opencv_features2d4120.lib  opencv_flann4120.lib  opencv_gapi4120.lib  opencv_highgui4120.lib  opencv_imgcodecs4120.lib  opencv_imgproc4120.lib  opencv_ml4120.lib  opencv_objdetect4120.lib  opencv_photo4120.lib  opencv_stitching4120.lib  opencv_video4120.lib  opencv_videoio4120.lib
project/: CMakeLists.txt  README.md  SimpleDogClassifier.cpp  SimpleDogClassifier.h  build.bat  predict.cpp  train.cpp  快速配置示例.cpp.txt  解决方案.txt  通用化使用说明.md
resource/: 数据.txt
